[tool.poetry]
name = "stormcollector"
version = "0.1.0"
description = ""
authors = ["Leron Gray <daddycocoaman@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
loguru = "^0.5.1"
tinydb = "^4.1.1"
aiohttp = "^3.6.2"
msal_extensions = "^0.2.2"
portalocker = "^1.7.1"
azure-common = "^1.1.25"
azure-mgmt-resource = "15.0.0b1"
azure-identity = "1.4.0b7"
uvloop = {version = "^0.14.0", platform = "linux"}


[tool.poetry.dev-dependencies]
pytest = "^5.2"
isort = "^5.2.0"
black = "^19.10b0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
