[tool.poetry]
name = "stormcollector"
version = "1.0.0b"
description = ""
authors = ["Leron Gray <legra@microsoft.com>"]

[tool.poetry.dependencies]
python = "^3.8"
loguru = "^0.5.1"
aiohttp = "^3.6.2"
msal_extensions = "^0.2.2"
portalocker = "^1.7.1"
azure-common = "^1.1.25"
azure-mgmt-resource = "^15.0.0"
azure-mgmt-authorization = "^0.60.0"
azure-identity = "^1.4.1"
uvloop = {version = "^0.14.0", platform = "linux"}
pywin32 = {version = "228", platform = "win"}
aiosqlite = "^0.15.0"
orjson = "^3.3.0"
aiofiles = "^0.5.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
isort = "^5.2.0"
black = "^19.10b0"
shiv = "^0.1.3"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
